# blink2d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  driver.py  install_run.py  main.cpp  make_script.py  run_tests.py  setup_xcode.py
XcodeProject/: .gitignore  CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
XcodeProject/CMakeScripts/: ReRunCMake.make
XcodeProject/Debug/: main
XcodeProject/blink2d.xcodeproj/: project.pbxproj
XcodeProject/blink2d.xcodeproj/xcshareddata/xcschemes/: main.xcscheme
XcodeProject/blinkgui/: cmake_install.cmake
XcodeProject/blinkgui/src/: cmake_install.cmake
XcodeProject/blinkmodel/: cmake_install.cmake
XcodeProject/blinkmodel/src/: cmake_install.cmake
XcodeProject/examples/: cmake_install.cmake
XcodeProject/examples/connect/: cmake_install.cmake
XcodeProject/examples/connect/src/: cmake_install.cmake
XcodeProject/examples/snake/: cmake_install.cmake
XcodeProject/examples/snake/src/: cmake_install.cmake
XcodeProject/tests/: CTestTestfile.cmake  cmake_install.cmake
XcodeProject/tests/Debug/: google_test_test
XcodeProject/tests/snake/: CTestTestfile.cmake  cmake_install.cmake
XcodeProject/tests/snake/Debug/: snake_test
blinkgui/: CMakeLists.txt
blinkgui/include/: AnimationManager.hpp  Application.hpp  BackgroundTexture.hpp  BlinkGame.hpp  Buttons.hpp  CircularBuffer.hpp  ControllerWindow.hpp  GameClock.hpp  GameGui.hide  GameGui.hpp  GameParameters.hpp  GameSettings.hpp  GridEntityManager.hpp  GridImg.hpp  GridLayer.hpp  GridWindow.hpp  HexGui.hpp  SDLTimer.hpp  SettingsPanel.hpp  Shape.hpp  ShapeSelector.hpp  ShapeType.hpp  SquareGui.hpp  TextureGeneration.hpp  TextureVector.hpp  Transform.hpp  TransformStrategy.hpp  VisualEntity.hpp  VisualEntityGridManager.hpp
blinkgui/include/gbuilders/: GridEntityBuilder.hpp
blinkgui/include/rendering/: BlinkTexture.hpp  RenderAction.hpp  RenderEx.hpp  RenderExManager.hpp  RenderInstruction.hpp  RenderManager.hpp  RenderStrategy.hpp  TextureStrategy.hpp
blinkgui/include/rendering/rendermanagers/: FastTexture.hpp  RenderEx.hpp  RenderExManager.hpp
blinkgui/src/: AnimationManager.cpp  Application.cpp  BlinkGame.cpp  CMakeLists.txt  ControllerWindow.cpp  GameClock.cpp  GameGui.cpp  GameGui.hide  GridEntityManager.cpp  GridImg.cpp  GridLayer.cpp  HexGui.cpp  SettingsPanel.cpp  ShapeSelector.cpp  ShapeType.cpp  SquareGui.cpp  TextureGeneration.cpp  Transform.cpp  TransformStrategy.cpp  VisualEntity.cpp
blinkgui/src/gbuilders/: CMakeLists.txt  GridEntityBuilder.cpp
blinkgui/src/rendering/: BlinkTexture.cpp  CMakeLists.txt  RenderAction.cpp  RenderEx.cpp  RenderInstruction.cpp  RenderManager.cpp  TextureStrategy.cpp
blinkgui/src/rendering/rendermanagers/: CMakeLists.txt  RenderEx.cpp
blinkmodel/: CMakeLists.txt
blinkmodel/include/: Command.hide  Command.hpp  CommandHistory.hpp  Coordinate.hpp  Direction.hpp  GameGrid.hpp  GameManager.hpp  GameState.hpp  GridEntity.hpp  Singleton.hpp  Utility.hpp
blinkmodel/includeComplex/: CRTP.hpp  Command.hpp  Coordinate.hpp  Direction.hpp  GameGrid.hpp  GameState.hpp  GridEntity.hpp
blinkmodel/src/: CMakeLists.txt  Command.cpp  Command.hide  CommandHistory.cpp  Coordinate.cpp  GameManager.cpp  GameState.cpp
examples/: CMakeLists.txt
examples/connect/: CMakeLists.txt
examples/connect/include/: ConnectGame.hpp  ConnectGui.hpp  ConnectModel.hpp  ConnectTextures.hpp
examples/connect/src/: CMakeLists.txt  ConnectGame.cpp  ConnectGui.cpp  ConnectModel.cpp
examples/noitasim/: CMakeLists.txt  CellMeta.hpp  CellProcessor.Hidecpp  CellProcessor.Hidehpp  CellProcessor.hpp  ColorTextureManager.cpp  ColorTextureManager.hpp  Field.hpp  NoitaConfig.hpp  NoitaControlPanel.cpp  NoitaControlPanel.hpp  NoitaSimGame.cpp  NoitaSimGame.hpp  NoitaSimGui.cpp  NoitaSimGui.hidepp  NoitaSimGui.hpp  NoitaSimModel.cpp  NoitaSimModel.hidepp  NoitaState.cpp  NoitaState.hidepp  NoitaState.hpp
examples/noitasim/cellarch/: CMakeLists.txt  CellConfig.hpp  CellManager.cpp  CellManager.hpp  CellMoveProcessor.hpp  ChunckManager.hpp  OneWalkProcessor.cpp  PhasedWalkProcessor.cpp  WalkCalculator.cpp  WalkCalculator.hpp  WalkGrid.hpp
examples/rocksolid/include/: RockSolidGame.hpp  RockSolidGui.hpp  RockSolidLevel.hpp  RockSolidModel.hpp  RockSolidNode.hpp  RockSolidTextureManager.hpp  Tool.hpp
examples/rocksolid/src/: CMakeLists.txt  RockSolidGui.cpp  RockSolidModel.cpp  RockSolidNode.cpp
examples/rocksolid2/: CMakeLists.txt
examples/rocksolid2/include/: ActiveToolModel.hpp  RockSolidLevel.hpp  RockSolidNode.hpp  RockSolidTextureManager.hpp
examples/rocksolid2/src/: ActiveToolModel.cpp  RockSolidGui.cpp  RockSolidNode.cpp  RockSolidTextureManager.cpp  Tool.cpp
examples/snake/: CMakeLists.txt
examples/snake/include/: Snake.hpp  SnakeGui.hpp  SnakeModel.hpp  SnakeModels.hide
examples/snake/src/: CMakeLists.txt  SnakeGui.cpp  SnakeModel.cpp
examples/testGame/: CMakeLists.txt
examples/testGame/include/: GemFallGame.hpp  GemFallGui.hpp  GemFallModel.hpp  GemFallTextureManager.hpp
examples/testGame/src/: CMakeLists.txt  GemFallGame.cpp  GemFallGui.cpp  GemFallModel.cpp  GemFallTextureManager.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  google_test_test.cpp
tests/CMakeScripts/: ReRunCMake.make
tests/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/googlemock/CMakeScripts/: ReRunCMake.make
tests/googlemock/gmock.xcodeproj/: project.pbxproj
tests/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/googletest-distribution.xcodeproj/: project.pbxproj
tests/googletest/CMakeScripts/: ReRunCMake.make
tests/googletest/gtest.xcodeproj/: project.pbxproj
tests/snake/: CMakeLists.txt  snake_test.cpp
