add_subdirectory(rendering) 
add_subdirectory(gbuilders) 

target_sources(${PROJECT_NAME}
    PRIVATE 
        ${CMAKE_CURRENT_SOURCE_DIR}/Application.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/AnimationManager.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/BlinkGame.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ControllerWindow.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/GameClock.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/GameGui.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/GridEntityManager.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/GridImg.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/GridLayer.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/SettingsPanel.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Transform.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/TransformStrategy.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/TextureGeneration.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/VisualEntity.cpp
)